more spacing fixes on footer wave

--- a/styles/media.scss
+++ b/styles/media.scss
@@ -123,7 +123,6 @@ $light-grey : #f8f8f8;
         .wave {
             img:nth-child(1) {
                 width: 120%;
-                margin-left: -30px;
                 transform: translateY(-80%);
             }
             img:nth-child(2) {
