--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -662,11 +662,11 @@ footer {
 
             &:first-child {
                 left: 0;
-                margin-left: -10px;
+                margin-left: -30px;
             }
 
             &:nth-child(2) {
-                right: -20;
+                right: -10;
             }
         }
     }
